<resources>
    <string name="app_name">MealMate</string>
    <string name="logo_desc">MealMate Logo</string>
    <string name="register_txt">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_user_name">User Name</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="total_orders_count">Total Order Count</string>
    <string name="customer_count">Customer Count</string>
    <string name="customer_count_value">Customer Count value</string>
    <string name="monthly_analytics">Monthly Analytics</string>
    <string name="total_orders">Total Orders</string>
    <string name="menu_management">Menus</string>
    <string name="orders_management">Orders</string>
    <string name="branches">Branches</string>
    <string name="analytics">Analytics</string>
    <string name="promotions">Promotions</string>
    <string name="add_food_item">Add Food Item</string>
    <string name="logout">Logout</string>
    <string name="order">Order</string>
    <string name="branch_address">Branch Address</string>
    <string name="branch_name">Branch Name</string>
    <string name="home">Home</string>
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="enter_branch_address">Enter Branch Address</string>
    <string name="add_branch">Add Branch</string>
    <string name="enter_branch_latitude">Enter the latitude</string>
    <string name="enter_branch_longitude">enter the longitute</string>
    <string name="update_food_item">Update Food Item</string>
    <string name="delete_food_item">Delete Food Item</string>
    <string-array name="meals_array">
            <item>Breakfast</item>
            <item>Lunch</item>
            <item>Dinner</item>
            <item>Soft Drinks</item>
            <item>Desserts</item>
        </string-array>

    <!--String Array for gender-->
    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="admin_roles">
        <item>Manager</item>
        <item>Assistant Manager</item>
        <item>Store Manager</item>
        <item>Delivery Person</item>
    </string-array>
</resources>