<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adminDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/adminNavBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0873A" >

            <Button
                android:id="@+id/BtnMenu"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="start"
                app:icon="@drawable/menu_icon"/>

            <TextView
                android:id="@+id/dashboardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:padding="16dp"
                android:text="@string/dashboard"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Content layout -->
        <!-- Your other UI components go here -->

    </RelativeLayout>

    <!-- A summary on key metrics like total orders, customer count, and a graph of monthly analytics.-->
    <LinearLayout
        android:id="@+id/adminDashboardSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminNavBar"
        android:layout_marginTop="58dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_orders"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1234"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_orders_count"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1255"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_count"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="595"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_count_value"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5950"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_analytics"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>




    </LinearLayout>


    <!-- Navigation Drawer -->
    <include
        layout="@layout/admin_dashboard_navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>
